@@ -63,6 +63,7 @@ https://github.com/elastic/beats/compare/v5.0.0-alpha4...master[Check the HEAD d
 - Check stdout being available when console output is configured. {issue}2035[2035]
 
 *Metricbeat*
+- Export total network traffic not only incoming and outgoing
 
 *Packetbeat*
 
